<resources>
    <string name="add_item">Add</string>
    <string name="check_network">Please check network</string>
    <string name="check_device">Please check if you wrote model and CSC code correctly.</string>
    <string name="close">Close</string>
    <string name="unknown">Unknown</string>
    <string name="notification_channel_new_firmware">New Firmware</string>
    <string name="notification_channel_new_update">App Update</string>
    <string name="notification_new_update_title">CheckFirm urgent update</string>
    <string name="notification_new_update_text">Critical bugs are reported. Please update it from Play Store right now.</string>
    <string name="notification_info_catcher_title">%1$s (%2$s) new firmware found!</string>
    <string name="notification_info_catcher_text">Check it now.</string>
    <string name="notification_permission_required_title">Permission required</string>
    <string name="notification_permission_required_message">CheckFirm provides Info Catcher, which alerts you when there is a newfound firmware. To use this feature, you should grant notification permission.</string>
    <string name="notification_permission_required_button_deny">Deny</string>
    <string name="notification_permission_required_button_grant">Grant</string>
    <string name="main_welcome_search_text">Welcome Search is disabled. It is recommend to turn on Welcome Search.</string>
    <string name="main_network_error_title">Network error</string>
    <string name="main_network_error_text">Network is not connected or too slow.</string>
    <string name="main_search_error_title">Search error</string>
    <string name="main_search_error_text">Model or CSC is incorrect.</string>
    <string name="main_category_dialog_description">Select category you want to show in quick search bar.</string>
    <string name="main_hello_title">Welcome to CheckFirm!</string>
    <string name="main_hello_description">You can search for the firmware information of Samsung devices. Check the features below.</string>
    <string name="main_hello_search_description">Search firmware information.</string>
    <string name="main_hello_bookmark_description">Add bookmarks and categories.</string>
    <string name="main_hello_info_catcher_description">Do not miss newfound firmware.</string>
    <string name="main_hello_settings_description">More features are waiting.</string>
    <string name="search">Search</string>
    <string name="official_latest">Latest official firmware</string>
    <string name="test_latest">Latest test firmware</string>
    <string name="model">Model</string>
    <string name="official_previous">Previous official firmware</string>
    <string name="test_previous">Previous test firmware</string>
    <string name="clipboard">Copied to clipboard.</string>
    <string name="search_error">Search failed. There is no data on Samsung server for this device.</string>
    <string name="multi_search_limit">You can search up to 5 devices</string>
    <string name="search_history">Search history</string>
    <string name="search_history_delete_all">Delete All</string>
    <string name="search_list_empty">Search list is empty.</string>
    <string name="search_no_bookmark">No bookmark</string>
    <string name="search_no_history">No history</string>
    <string name="search_add_bookmark">Add bookmark</string>
    <string name="search_result_tab_previous">Previous</string>
    <string name="search_result_tab_beta">Beta</string>
    <string name="sherlock">Sherlock</string>
    <string name="sherlock_build">Build version</string>
    <string name="sherlock_baseband">Baseband version</string>
    <string name="sherlock_tab_manual">Manual</string>
    <string name="sherlock_tab_script">Script</string>
    <string name="sherlock_result_success">Congratulations! You solved the encrypted firmware information.</string>
    <string name="sherlock_result_fail">Decryption failed. You can try again by changing the value.</string>
    <string name="sherlock_manual_description">Now you are a detective who solves the encrypted firmware information! Try decrypting by entering values in each field.</string>
    <string name="sherlock_script">Sherlock script</string>
    <string name="sherlock_script_description">All you need to do is entering the start and end value. Sherlock Script will try to find decrypted firmware information with all data between start and end value. Please note that if the difference between the start value and the end value is too large, the app may be forced to close due to overload.</string>
    <string name="sherlock_script_start_value">Start</string>
    <string name="sherlock_script_end_value">End</string>
    <string name="sherlock_script_start">Start script</string>
    <string name="sherlock_script_error_1">Bootloader: start value is larger than end value.</string>
    <string name="sherlock_script_error_2">Bootloader: start value is larger than end value.</string>
    <string name="sherlock_script_error_3">One UI version: start value is larger than end value.</string>
    <string name="sherlock_script_error_4">Year: start value is larger than end value.</string>
    <string name="sherlock_script_error_5">Month: start value is larger than end value.</string>
    <string name="sherlock_script_error_6">Revision: start value is larger than end value.</string>
    <string name="sherlock_script_error_7">Something wrong in start value.</string>
    <string name="sherlock_script_error_8">Something wrong in end value.</string>
    <string name="sherlock_script_no_error">There seems to be no error.\nReady to go!</string>
    <string name="sherlock_script_running">Script running…\nDo not exit this screen.</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_new">New bookmark</string>
    <string name="bookmark_edit">Edit bookmark</string>
    <string name="bookmark_name">Bookmark name</string>
    <string name="bookmark_save">Save</string>
    <string name="bookmark_search_error">Check if model and CSC code is correctly saved in bookmark.</string>
    <string name="bookmark_name_error">Please name this bookmark!</string>
    <string name="backup">Backup</string>
    <string name="backup_description">Save CheckFirm bookmark and category as JSON file.</string>
    <string name="restore">Restore</string>
    <string name="restore_description">Load backup JSON file to restore.</string>
    <string name="backup_toast">Backup complete.</string>
    <string name="restore_toast">Restore completed.</string>
    <string name="help">Help</string>
    <string name="help_device_info">Device info</string>
    <string name="help_device_info_description">Model · CSC</string>
    <string name="help_device_info_edit">Edit</string>
    <string name="help_device_name">Device name</string>
    <string name="help_device_info_bookmark">Bookmark saved.</string>
    <string name="help_manual">Firmware manual</string>
    <string name="help_manual_description">Firmware information</string>
    <string name="help_firmware_manual_description">Firmware information consists of 3 information. They are build version, CSC version, and baseband version.\n\nSuppose that firmware search result is\nA720SKSU3BRK1/A720SSKC3BRK1/A720NKOU3BRK1.\n\nFirst one(A720SKSU3BRK1) refers to build version,\nsecond one(A720SSKC3BRK1) refers to CSC version,\nlast one(A720NKOU3BRK1) refers to baseband version.</string>
    <string name="help_firmware_manual_build_description">A720SKSU3BRK1 refers to the build version. You can get the bootloader version, One UI version, firmware build year, month and the revision number(minor version) from the build version.</string>
    <string name="help_firmware_manual_build_device_description">It is model number. In this case, A720 is Samsung Galaxy A7 (2017).</string>
    <string name="help_firmware_manual_build_region_description">It is region code. In this case, SKS means South Korea. It could be 4-letter-code.</string>
    <string name="help_firmware_manual_build_bootloader_description">It is bootloader version. Due to Samsung\'s security policy, you cannot downgrade from higher bootloader version firmware to lower bootloader version firmware.</string>
    <string name="help_firmware_manual_build_one_ui_description">It is One UI version.\nIf yellow text is updated, it means One UI is going to be or has been updated.\n\nA means very first major version.\nB means major update has been released once.\nC means major update has been released twice.\n.\n.\n.\nZ means beta firmware.</string>
    <string name="help_firmware_manual_build_year_description">It is year when firmware was built.\n\nT means 2020,\nU means 2021,\nV means 2022, and so on.</string>
    <string name="help_firmware_manual_build_month_description">It is month when firmware was built.\n\nA means January,\nB means February,\n.\n.\n.\nL means December.</string>
    <string name="help_firmware_manual_build_revision_description">It is revision number (minor version).\n\n1 means firmware was built once.\n.\n.\n.\n9 means firmware was built 9 times.\nA means firmware was built 10 times.\n.\n.\n.\nF means firmware was built 16 times.</string>
    <string name="help_firmware_manual_csc_description">A720SSKC3BRK1 refers to CSC version. CSC is an abbreviation for Consumer Software Customization and refers to the specific regional or carrier firmware installed on a Samsung device.</string>
    <string name="help_firmware_manual_baseband_description">A720NKOU3BRK1 refers to baseband version. Baseband is a firmware that controls the radio on your device. It is responsible for wireless communication between your device and the network.</string>
    <string name="about_app_information">App information</string>
    <string name="about_version">Version</string>
    <string name="about_latest">The latest version is already installed.</string>
    <string name="about_update">Update</string>
    <string name="license">License</string>
    <string name="legal">Legal Information</string>
    <string name="legal_text">Official firmware information came from https://fota-cloud-dn.ospserver.net/firmware/CSC/MODEL/version.xml.\n\nTest firmware information came from https://fota-cloud-dn.ospserver.net/firmware/CSC/MODEL/version.test.xml.\n\nThey are not the official ways that Samsung Electronics provides firmware information to customers. Any use of this information is at your own risk.</string>
    <string name="contributor">Contributor</string>
    <string name="contributor_application">Application</string>
    <string name="contributor_designer">Designer</string>
    <string name="contributor_developer">Developer</string>
    <string name="contributor_russian">Russian</string>
    <string name="contributor_chinese">Chinese</string>
    <string name="contributor_czech">Czech</string>
    <string name="contributor_portuguese">Portuguese</string>
    <string name="contributor_romanian">Romanian</string>
    <string name="contributor_sinhala">Sinhala</string>
    <string name="contributor_translator">Translator</string>
    <string name="settings">Settings</string>
    <string name="settings_profile_user_name">User name</string>
    <string name="settings_theme">Theme</string>
    <string name="welcome_search">Welcome Search</string>
    <string name="suggestion">Suggestion</string>
    <string name="suggestion_enable_welcome_search">Enable Welcome Search</string>
    <string name="suggestion_check_my_device_info">Check my device information</string>
    <string name="suggestion_wifi">Turn on Wi-Fi</string>
    <string name="suggestion_data">Turn on mobile data</string>
    <string name="suggestion_search_my_device">Search this device</string>
    <string name="category">Category</string>
    <string name="outdated_title">Needs update</string>
    <string name="outdated_description">The current version is no longer supported. Please update to the latest version. Sorry for your inconvenience.</string>
</resources>