<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_title"
        style="@style/BottomSheetDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_permission_required_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_message"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notification_permission_required_message"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/negative_button"
        style="@style/OneUI.DialogButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notification_permission_required_button_deny"
        app:layout_constraintEnd_toStartOf="@id/positive_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/positive_button"
        style="@style/OneUI.DialogButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notification_permission_required_button_grant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/negative_button"
        app:layout_constraintTop_toBottomOf="@id/dialog_message" />

</androidx.constraintlayout.widget.ConstraintLayout>
