<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/no_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/cardview_point"
                    app:tint="@color/red" />

                <com.google.android.material.textview.MaterialTextView
                    style="?textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/welcome_search" />

                <com.google.android.material.textview.MaterialTextView
                    style="?textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/main_welcome_search_text" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:cardBackgroundColor="@color/tip_card_background_color"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            style="?textAppearanceBody1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/suggestion"
                            android:textColor="@color/tip_title_color" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/welcome_search_setting"
                            style="?textAppearanceBody2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/suggestion_enable_welcome_search"
                            android:textColor="@color/tip_text_color" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/network_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/cardview_point"
                    app:tint="@color/red" />

                <com.google.android.material.textview.MaterialTextView
                    style="?textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/main_network_error_title" />

                <com.google.android.material.textview.MaterialTextView
                    style="?textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/main_network_error_text" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:cardBackgroundColor="@color/tip_card_background_color"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            style="?textAppearanceBody1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/suggestion"
                            android:textColor="@color/tip_title_color" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/wifi_setting"
                            style="?textAppearanceBody2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/suggestion_wifi"
                            android:textColor="@color/tip_text_color" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/data_setting"
                            style="?textAppearanceBody2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/suggestion_data"
                            android:textColor="@color/tip_text_color" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/search_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/cardview_point"
                    app:tint="@color/red" />

                <com.google.android.material.textview.MaterialTextView
                    style="?textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/main_search_error_title" />

                <com.google.android.material.textview.MaterialTextView
                    style="?textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/main_search_error_text" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:cardBackgroundColor="@color/tip_card_background_color"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            style="?textAppearanceBody1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/suggestion"
                            android:textColor="@color/tip_title_color" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/my_device"
                            style="?textAppearanceBody2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/suggestion_check_my_device_info"
                            android:textColor="@color/tip_text_color" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
